kubernetes/apps/kintai/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kintai-frontend
  labels:
    app: kintai-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kintai-frontend
  template:
    metadata:
      labels:
        app: kintai-frontend
    spec:
      containers:
        - name: app
          image: ghcr.io/piny940/kintai-frontend:1.0.5 # {"$imagepolicy": "flux-system:kintai-frontend"}
          ports:
            - containerPort: 4400
    data:
      - name: BACKEND_HOST
        value: kintai-backend.default.svc.cluster.local
